--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-            image 'maven:3.8.8-eclipse-temurin-17'
+            image 'docker:24.0.2-maven'
      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
