--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,68 +1,105 @@
 pipeline {
-  agent {
-    docker {
-            image 'docker:24.0.2-maven'
-     args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-    }
-  }
+  agent none
+
   stages {
     stage('Checkout') {
+      agent any
       steps {
-        sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
+        checkout scm
       }
     }
-    stage('Build and Test') {
+
+    stage('Build & Test') {
+      agent {
+        docker {
+          image 'maven:3.8.8-eclipse-temurin-17'
+          args  '--user root -v /root/.m2:/root/.m2'
+        }
+      }
       steps {
-        sh 'ls -ltr'
-        // build the project and create a JAR file
-        sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
+        sh '''
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          mvn clean package -DskipTests
+        '''
+        archiveArtifacts artifacts: 'java-maven-sonar-argocd-helm-k8s/spring-boot-app/target/*.jar', fingerprint: true
       }
     }
+
     stage('Static Code Analysis') {
+      agent {
+        docker {
+          image 'maven:3.8.8-eclipse-temurin-17'
+          args  '--user root -v /root/.m2:/root/.m2'
+        }
+      }
       environment {
-        SONAR_URL = "http://34.132.201.79:9000"
+        SONAR_URL = 'http://34.132.201.79:9000'
       }
       steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_TOKEN')]) {
+          sh '''
+            cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+            mvn sonar:sonar \
+              -Dsonar.login=${SONAR_TOKEN} \
+              -Dsonar.host.url=${SONAR_URL}
+          '''
         }
       }
     }
-    stage('Build and Push Docker Image') {
+
+    stage('Build & Push Docker Image') {
+      agent {
+        docker {
+          image 'docker:24.0.1-dind'       // Official Docker-in-Docker image
+          args  '--privileged -v /var/run/docker.sock:/var/run/docker.sock'
+        }
+      }
       environment {
-        DOCKER_IMAGE = "airforce7/ultimate-cicd:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
+        IMAGE_NAME = "airforce7/ultimate-cicd:${BUILD_NUMBER}"
       }
       steps {
+        sh '''
+          cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+          docker build -t ${IMAGE_NAME} .
+        '''
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
-            def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://index.docker.io/v1/', "docker-cred") {
-                dockerImage.push()
-            }
+          docker.withRegistry('', 'docker-cred') {
+            docker.image(IMAGE_NAME).push()
+          }
         }
       }
     }
-    stage('Update Deployment File') {
-        environment {
-            GIT_REPO_NAME = "java-cicd-pipeline"
-            GIT_USER_NAME = "shubh-swe"
+
+    stage('Update Deployment') {
+      agent any
+      environment {
+        GIT_REPO   = 'java-cicd-pipeline'
+        GIT_USER   = 'shubh-swe'
+      }
+      steps {
+        withCredentials([string(credentialsId: 'github', variable: 'GIT_TOKEN')]) {
+          sh '''
+            git config user.name "Shubham Dwivedi"
+            git config user.email "shubhamdwivedi.spacepilot@gmail.com"
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
+                java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+            git commit -m "Update image to ${BUILD_NUMBER}"
+            git push https://${GIT_TOKEN}@github.com/${GIT_USER}/${GIT_REPO}.git HEAD:main
+          '''
         }
-        steps {
-            withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
-                sh '''
-                    git config user.email "shubhamdwivedi.spacepilot@gmail.com"
-                    git config user.name "Shubham Dwivedi"
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
-                '''
-            }
-        }
+      }
+    }
+  }
+
+  post {
+    always {
+      cleanWs()
+    }
+    failure {
+      mail to: 'shubhamdwivedi.spacepilot@gmail.com',
+           subject: "Build #${BUILD_NUMBER} Failed",
+           body: "Check console output at ${BUILD_URL}"
     }
   }
 }
