--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: spring-boot-app
-        image: airforce7/ultimate-cicd:replaceImageTag  # ← YE CHANGE KIYA MAINE
+        image: airforce7/ultimate-cicd:12  # ← YE CHANGE KIYA MAINE
         ports:
         - containerPort: 8080
