--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -76,21 +76,16 @@ pipeline {
       steps {
         withCredentials([string(credentialsId: 'github', variable: 'GIT_TOKEN')]) {
           sh '''
-            # Fix detached HEAD by checking out the branch
             git checkout main || git checkout -b main
             git pull origin main || echo "No upstream to pull from"
-            
-            # Configure git user
+
             git config user.name "Shubham Dwivedi"
             git config user.email "shubhamdwivedi.spacepilot@gmail.com"
-            
-            # Update deployment file
-            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" \
-                java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
-            
-            # Check if there are changes to commit
+
+            sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
             if git diff --quiet HEAD -- java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml; then
-              echo "No changes to commit - deployment already up to date"
+              echo "No changes to commit - deployment up to date"
             else
               git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
               git commit -m "Update image to ${BUILD_NUMBER}"
@@ -105,109 +100,7 @@ pipeline {
   post {
     always {
       node('any') {
-        cleanWs(
-          cleanWhenNotBuilt: false,
-          deleteDirs: true,
-          disableDeferredWipeout: true,
-          notFailBuild: true
-        )
-      }
-    }
-    success {
-      node('any') {
-        script {
-          echo "✅ Pipeline completed successfully!"
-          echo "🐳 Docker Image: airforce7/ultimate-cicd:${BUILD_NUMBER}"
-          echo "🚀 Deployment updated successfully"
-          
-          try {
-            mail to: 'shubhamdwivedi.spacepilot@gmail.com',
-                 subject: "✅ Build #${BUILD_NUMBER} SUCCESS - ${JOB_NAME}",
-                 body: """
-Hi Shubham,
-
-Your CI/CD Pipeline completed successfully! 🎉
-
-📋 Build Details:
-• Job: ${JOB_NAME}
-• Build Number: ${BUILD_NUMBER}
-• Docker Image: airforce7/ultimate-cicd:${BUILD_NUMBER}
-• Build URL: ${BUILD_URL}
-
-🚀 Next Steps:
-• Your application is ready for deployment
-• Check ArgoCD for automatic sync
-• Monitor application logs
-
-Thanks,
-Jenkins CI/CD Bot
-                 """
-          } catch (Exception e) {
-            echo "📧 Mail notification failed: ${e.getMessage()}"
-          }
-        }
-      }
-    }
-    failure {
-      node('any') {
-        script {
-          try {
-            mail to: 'shubhamdwivedi.spacepilot@gmail.com',
-                 subject: "❌ Build #${BUILD_NUMBER} FAILED - ${JOB_NAME}",
-                 body: """
-Hi Shubham,
-
-Your CI/CD Pipeline failed! ❌
-
-📋 Build Details:
-• Job: ${JOB_NAME}  
-• Build Number: ${BUILD_NUMBER}
-• Build URL: ${BUILD_URL}
-• Console Output: ${BUILD_URL}console
-
-🔧 Action Required:
-• Check the console output for error details
-• Fix the issues and trigger a new build
-• Contact DevOps team if you need assistance
-
-Thanks,
-Jenkins CI/CD Bot
-                 """
-          } catch (Exception e) {
-            echo "📧 Mail notification failed: ${e.getMessage()}"
-          }
-        }
-      }
-    }
-    unstable {
-      node('any') {
-        script {
-          echo "⚠️ Pipeline completed with warnings"
-          try {
-            mail to: 'shubhamdwivedi.spacepilot@gmail.com',
-                 subject: "⚠️ Build #${BUILD_NUMBER} UNSTABLE - ${JOB_NAME}",
-                 body: """
-Hi Shubham,
-
-Your CI/CD Pipeline completed but with warnings! ⚠️
-
-📋 Build Details:
-• Job: ${JOB_NAME}
-• Build Number: ${BUILD_NUMBER}  
-• Build URL: ${BUILD_URL}
-
-🔍 Action Recommended:
-• Review the console output for warnings
-• Consider fixing non-critical issues
-• Monitor the deployment
-
-Thanks,
-Jenkins CI/CD Bot
-                 """
-          } catch (Exception e) {
-            echo "📧 Mail notification failed: ${e.getMessage()}"
-          }
-        }
+        cleanWs()
       }
     }
   }
