--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -40,7 +40,7 @@ pipeline {
           sh '''
             cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
             mvn sonar:sonar \
-              -Dsonar.login=${SONAR_TOKEN} \
+              -Dsonar.token=${SONAR_TOKEN} \
               -Dsonar.host.url=${SONAR_URL}
           '''
         }
