--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile
@@ -1,12 +1,9 @@
-# You can change this base image to anything else
-# But make sure to use the correct version of Java
 FROM eclipse-temurin:17-jre-alpine
-# Simply the artifact path
-ARG artifact=target/spring-boot-web.jar
 
 WORKDIR /opt/app
 
+ARG artifact=target/spring-boot-web.jar
 COPY ${artifact} app.jar
 
-# This should not be changed
+EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
