--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -12,7 +12,8 @@ pipeline {
     stage('Build & Test') {
       agent {
         docker {
-          image 'maven:3.8.8-eclipse-temurin-17'
+          image 'maven:3.8.8-openjdk-11'
+
           args  '--user root -v /root/.m2:/root/.m2 --entrypoint=""'
         }
       }
