--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -13,7 +13,6 @@ pipeline {
       agent {
         docker {
           image 'maven:3.8.8-openjdk-11'
-
           args  '--user root -v /root/.m2:/root/.m2 --entrypoint=""'
         }
       }
@@ -29,7 +28,7 @@ pipeline {
     stage('Static Code Analysis') {
       agent {
         docker {
-          image 'maven:3.8.8-eclipse-temurin-17'
+          image 'maven:3.8.8-openjdk-11'   // 🔥 Fixed → Java 11 only
           args  '--user root -v /root/.m2:/root/.m2 --entrypoint=""'
         }
       }
